# xtomarkdown

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  THIRD_PARTY_LICENSES  pyproject.toml
LICENSES/: MIT-platformdirs.txt  MIT-pypandoc.txt
docs/: index.html  privacy-policy.html  style.css  support.html
packaging/: APPIMAGEHUB.md  FLATHUB.md  MAC_APP_STORE.md  MARKETING_DESCRIPTIONS.md  MICROSOFT_STORE.md  README.md
packaging/linux/: AppImageBuilder.yml  build-appimage.sh  build-flatpak.sh  com.github.tx2z.XtoMarkdown.desktop  com.github.tx2z.XtoMarkdown.flathub.yml  com.github.tx2z.XtoMarkdown.metainfo.xml  com.github.tx2z.XtoMarkdown.yml  io.github.tx2z.XtoMarkdown.desktop  io.github.tx2z.XtoMarkdown.flathub.yml  io.github.tx2z.XtoMarkdown.yml  python-deps.yaml  test-appimage.sh
packaging/macos/: Info.plist  build-macos.sh  entitlements-inherit.plist  entitlements.plist
packaging/windows/: AppxManifest.xml  build-msix.bat  build-msix.ps1
src/xtomarkdown/: __init__.py  __main__.py  app.py  launcher.py
src/xtomarkdown/config/: __init__.py  defaults.py  settings.py
src/xtomarkdown/core/: converter.py  file_mapping.py
src/xtomarkdown/core/engines/: __init__.py  base.py  markitdown.py  pandoc.py  registry.py
src/xtomarkdown/gui/: __init__.py  about_dialog.py  drop_zone.py  main_window.py  preferences.py
src/xtomarkdown/gui/resources/: icons.py  style.qss
tests/: __init__.py  test_converter.py  test_engines.py  test_file_mapping.py  test_registry.py  test_settings.py
